Increase the priority of the mixing thread to improve performace under load.

This should address PR kern/52098.